# bc-fastapi

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  SECURITY.md
.github/: FUNDING.yml  (+2 more)
bootcamp/week-01/3-proyecto/starter/: Dockerfile  pyproject.toml
bootcamp/week-01/3-proyecto/starter/src/: main.py
bootcamp/week-02/3-proyecto/starter/: database.py  main.py  pyproject.toml
bootcamp/week-03/2-practicas/ejercicio-03-query-params/starter/: Dockerfile  pyproject.toml
bootcamp/week-04/2-practicas/ejercicio-04-documentacion/starter/: pyproject.toml
bootcamp/week-04/3-proyecto/starter/: database.py  exceptions.py  main.py  models.py  pyproject.toml
bootcamp/week-07/3-proyecto/starter/: pyproject.toml
bootcamp/week-07/3-proyecto/starter/src/: __init__.py  config.py  database.py  main.py  unit_of_work.py
bootcamp/week-07/3-proyecto/starter/src/models/: __init__.py  base.py  task.py  user.py
bootcamp/week-07/3-proyecto/starter/src/repositories/: __init__.py  base.py  task.py  user.py
bootcamp/week-07/3-proyecto/starter/src/routers/: __init__.py  tasks.py  users.py
bootcamp/week-07/3-proyecto/starter/src/schemas/: __init__.py  task.py  user.py
bootcamp/week-07/3-proyecto/starter/src/services/: __init__.py  task.py  user.py
bootcamp/week-07/3-proyecto/starter/tests/: conftest.py  test_task_service.py  test_user_service.py
bootcamp/week-07/3-proyecto/starter/tests/fakes/: repositories.py
bootcamp/week-08/3-proyecto/starter/: config.py  database.py  dependencies.py  main.py  pyproject.toml
bootcamp/week-08/3-proyecto/starter/exceptions/: __init__.py  base.py  category.py  order.py  product.py  user.py
bootcamp/week-08/3-proyecto/starter/handlers/: __init__.py  exception_handlers.py
bootcamp/week-08/3-proyecto/starter/mappers/: __init__.py  order.py  product.py  user.py
bootcamp/week-08/3-proyecto/starter/models/: __init__.py  category.py  order.py  product.py  user.py
bootcamp/week-08/3-proyecto/starter/repositories/: __init__.py  base.py  category.py  order.py  product.py  user.py
bootcamp/week-08/3-proyecto/starter/routers/: __init__.py  categories.py  orders.py  products.py  users.py
bootcamp/week-08/3-proyecto/starter/schemas/: __init__.py  category.py  order.py  product.py  user.py
bootcamp/week-08/3-proyecto/starter/services/: __init__.py  category.py  order.py  product.py  user.py
bootcamp/week-09/2-practicas/03-inyeccion-dependencias/starter/: pyproject.toml
bootcamp/week-09/2-practicas/03-inyeccion-dependencias/starter/src/: config.py  main.py
bootcamp/week-10/2-practicas/01-domain-modeling/starter/: pyproject.toml
bootcamp/week-10/2-practicas/01-domain-modeling/starter/src/: __init__.py
bootcamp/week-10/2-practicas/02-application-services/starter/: pyproject.toml
bootcamp/week-10/2-practicas/02-application-services/starter/src/: __init__.py
bootcamp/week-10/2-practicas/04-wiring-composition/starter/: .env.example  pyproject.toml
bootcamp/week-10/2-practicas/04-wiring-composition/starter/src/: __init__.py  main.py
bootcamp/week-10/3-proyecto/starter/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
bootcamp/week-10/3-proyecto/starter/src/: __init__.py  main.py
bootcamp/week-10/3-proyecto/starter/src/application/: __init__.py
bootcamp/week-10/3-proyecto/starter/src/domain/: __init__.py  exceptions.py
bootcamp/week-10/3-proyecto/starter/src/infrastructure/: __init__.py  config.py
bootcamp/week-11/2-practicas/01-password-hashing/starter/: pyproject.toml
bootcamp/week-11/2-practicas/01-password-hashing/starter/tests/: test_password.py
bootcamp/week-11/2-practicas/03-oauth2-fastapi/starter/: pyproject.toml
bootcamp/week-11/2-practicas/03-oauth2-fastapi/starter/src/: main.py
bootcamp/week-11/2-practicas/03-oauth2-fastapi/starter/tests/: test_auth.py
bootcamp/week-11/3-proyecto/starter/: pyproject.toml
bootcamp/week-11/3-proyecto/starter/src/: config.py  database.py  main.py
bootcamp/week-11/3-proyecto/starter/src/auth/: __init__.py  dependencies.py  router.py  schemas.py  security.py
bootcamp/week-11/3-proyecto/starter/tests/: conftest.py  test_auth.py  test_users.py
bootcamp/week-12/2-practicas/01-primeros-tests/: README.md  pyproject.toml
bootcamp/week-12/2-practicas/01-primeros-tests/src/: __init__.py  calculator.py
bootcamp/week-12/2-practicas/01-primeros-tests/tests/: test_calculator.py
bootcamp/week-12/2-practicas/02-fixtures-avanzados/: README.md  pyproject.toml
bootcamp/week-12/2-practicas/02-fixtures-avanzados/src/: models.py
bootcamp/week-12/2-practicas/02-fixtures-avanzados/tests/: conftest.py  test_fixtures.py  test_scopes.py
bootcamp/week-12/2-practicas/03-testing-endpoints/: README.md  pyproject.toml
bootcamp/week-12/2-practicas/03-testing-endpoints/src/: __init__.py  auth.py  database.py  main.py  models.py  schemas.py
bootcamp/week-12/2-practicas/03-testing-endpoints/tests/: conftest.py  test_auth.py  test_items.py
bootcamp/week-13/2-practicas/01-websocket-basico/starter/: main.py  pyproject.toml
bootcamp/week-13/2-practicas/03-sse-notifications/starter/: main.py  notifications.py  pyproject.toml
bootcamp/week-13/3-proyecto/starter/: pyproject.toml
bootcamp/week-13/3-proyecto/starter/src/: auth.py  config.py  database.py  main.py  manager.py  models.py  notifications.py  schemas.py  services.py
bootcamp/week-13/3-proyecto/starter/templates/: chat.html
bootcamp/week-13/3-proyecto/starter/tests/: conftest.py  test_auth.py  test_sse.py  test_websocket.py
bootcamp/week-14/2-practicas/03-structured-logging/starter/: logging_config.py  main.py  pyproject.toml  test_logging.py
bootcamp/week-14/2-practicas/04-prometheus-metrics/starter/: health.py  main.py  metrics.py  pyproject.toml  test_metrics.py
bootcamp/week-14/3-proyecto/starter/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
bootcamp/week-14/3-proyecto/starter/src/: config.py  database.py  main.py  models.py  schemas.py
bootcamp/week-14/3-proyecto/starter/tests/: test_health.py  test_logging.py  test_rate_limit.py  test_security.py
(+684 files in other folders)
