# ============================================
# PYPROJECT.TOML - Proyecto API de Saludo
# ============================================

[project]
name = "greeting-api"
version = "1.0.0"
description = "API de Saludo - Proyecto Semana 01"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi[standard]>=0.115.0",
]
