[project]
name = "contacts-api"
version = "1.0.0"
description = "API de Gestión de Contactos - Proyecto Semana 02"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "pydantic[email]>=2.10",
    "uvicorn>=0.32",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "httpx>=0.27",
]
