[project]
name = "ejercicio-03-query-params"
version = "0.1.0"
description = "Ejercicio 03: Query Parameters - Filtrado y Paginación"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
