[project]
name = "password-hashing-practice"
version = "0.1.0"
description = "Práctica de hashing de contraseñas"
requires-python = ">=3.13"
dependencies = [
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
